--- a/LightMatrixEscape/build.gradle
+++ b/LightMatrixEscape/build.gradle
@@ -27,11 +27,17 @@ dependencies {
 	
     testCompileOnly "org.projectlombok:lombok:1.18.30"
     testAnnotationProcessor "org.projectlombok:lombok:1.18.30"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 javafx {
     version = "21"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.media' ]
+}
+
+test {
+    useJUnitPlatform()
 }
 
 mainClassName = 'mainClass'
