--- a/LightMatrixEscape/build.gradle
+++ b/LightMatrixEscape/build.gradle
@@ -27,8 +27,8 @@ dependencies {
 	
     testCompileOnly "org.projectlombok:lombok:1.18.30"
     testAnnotationProcessor "org.projectlombok:lombok:1.18.30"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    
+     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
 }
 
 javafx {
